[package]
name = "flid-server"
version = "0.1.0"
authors = ["Иван Плесских <terma95@gmail.com>"]
edition = "2018"

[dependencies]
ws = "0.9"
rand = "0.7"
serde_json = "1.0"
serde_derive = "1.0"
serde = "*"
log = "0.4"
env_logger="0.6"
time="0.1"
crossbeam-channel = "0.3"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'